@@ -1,3 +1,6 @@
+[B]1.0.21[/B]
+- login javítása
+- új API endpoint használata
 [B]1.0.20[/B]
 - Cache-elés megvalósítása (default 4 óra, beállításokban módosítható)
 - Évad feldolgozás javítása
